--- a/bower.json
+++ b/bower.json
@@ -22,5 +22,8 @@
     "bootstrap": "~3.3.6",
     "angular-google-maps": "~2.2.1",
     "angular-bootstrap": "~0.14.3"
+  },
+  "resolutions": {
+    "angular": "^1.6.6"
   }
 }
